force-app/main/default/objects/eTutorDetails__c/eTutorDetails__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>eTutorDetails</label>
</CustomObject>