force-app/main/default/objects/eTutorDetails__c/fields/APIKEY__c.field-meta.xml
<CustomField>
    <fullName>APIKEY__c</fullName>
    <label>APIKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>