force-app/main/default/objects/eTutorDetails__c/fields/DiscountCouponURL__c.field-meta.xml
<CustomField>
    <fullName>DiscountCouponURL__c</fullName>
    <label>DiscountCouponURL</label>
    <type>Url</type>
</CustomField>