force-app/main/default/objects/eTutorDetails__c/fields/PlagiairsmPaymentURL__c.field-meta.xml
<CustomField>
    <fullName>PlagiairsmPaymentURL__c</fullName>
    <label>PlagiairsmPaymentURL</label>
    <type>Url</type>
</CustomField>