force-app/main/default/objects/eTutorDetails__c/fields/PlagiairsmURL__c.field-meta.xml
<CustomField>
    <fullName>PlagiairsmURL__c</fullName>
    <label>PlagiairsmURL</label>
    <type>Url</type>
</CustomField>