force-app/main/default/objects/eTutorDetails__c/fields/WorkOrderPaymentURL__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderPaymentURL__c</fullName>
    <label>WorkOrderPaymentURL</label>
    <type>Url</type>
</CustomField>