force-app/main/default/objects/eTutorDetails__c/fields/WorkOrderURL__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderURL__c</fullName>
    <label>WorkOrderURL</label>
    <type>Url</type>
</CustomField>